fix: aligned header left and right

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ header {
 .menu-container {
     width: 25%;
     display: flex;
+    padding-left: 5px;
 }
 
 .logo-container {
@@ -145,6 +146,7 @@ header {
     width: 25%;
     display: flex;
     justify-content: flex-end;
+    padding-right: 10px;
 }
 
 .logo-container img {
